--- a/buyer_dashboard.html
+++ b/buyer_dashboard.html
@@ -526,7 +526,7 @@ const translations = {
       "mark_paid.instruction": "🔹 After making payment: Enter the Escrow ID shown after creating escrow",
       "mark_paid.ph_escrow_id": "Enter Escrow ID (e.g., 5)",
       "release.instruction": "🔹 After confirming goods/services: Enter the Escrow ID to release payment to seller",
-      "release.ph_escrow_id": "Enter Escrow ID (e.g., 5)"
+      "release.ph_escrow_id": "Enter Escrow ID (e.g., 5)",
        "credentials.instruction": "🔹 After seller provides credentials: Enter Escrow ID to view/download credentials",
        "credentials.ph_escrow_id": "Enter Escrow ID (e.g., 5)",
        "credentials.h3": "Seller Provided Credentials", 
@@ -640,7 +640,7 @@ const translations = {
       "mark_paid.instruction": "🔹 Après paiement : Entrez l'ID d'escrow affiché après la création de l'escrow",
       "mark_paid.ph_escrow_id": "Entrez l'ID d'escrow (ex. 5)",
       "release.instruction": "🔹 Après confirmation des biens/services : Entrez l'ID d'escrow pour libérer le paiement au vendeur",
-      "release.ph_escrow_id": "Entrez l'ID d'escrow (ex. 5)"
+      "release.ph_escrow_id": "Entrez l'ID d'escrow (ex. 5)",
       "credentials.instruction": "🔹 Après que le vendeur a fourni les identifiants : Entrez l'ID Escrow pour voir/télécharger les identifiants",
       "credentials.ph_escrow_id": "Entrez l'ID Escrow (ex. 5)",
       "credentials.h3": "Identifiants fournis par le vendeur",
@@ -697,7 +697,7 @@ const translations = {
       "mark_paid.instruction": "🔹 Dopo il pagamento: Inserisci l'ID Escrow mostrato dopo la creazione dell'escrow",
       "mark_paid.ph_escrow_id": "Inserisci ID Escrow (es. 5)",
       "release.instruction": "🔹 Dopo la conferma di beni/servizi: Inserisci l'ID Escrow per rilasciare il pagamento al venditore",
-      "release.ph_escrow_id": "Inserisci ID Escrow (es. 5)"
+      "release.ph_escrow_id": "Inserisci ID Escrow (es. 5)",
        "credentials.instruction": "🔹 Dopo che il venditore fornisce le credenziali: Inserisci l'ID Escrow per visualizzare/scaricare le credenziali",
       "credentials.ph_escrow_id": "Inserisci ID Escrow (es. 5)",
       "credentials.h3": "Credenziali fornite dal venditore", 
@@ -754,7 +754,7 @@ const translations = {
       "mark_paid.instruction": "🔹 Después del pago: Ingrese el ID de Escrow mostrado después de crear el escrow",
       "mark_paid.ph_escrow_id": "Ingrese ID de Escrow (ej. 5)",
       "release.instruction": "🔹 Después de confirmar bienes/servicios: Ingrese el ID de Escrow para liberar el pago al vendedor",
-      "release.ph_escrow_id": "Ingrese ID de Escrow (ej. 5)"
+      "release.ph_escrow_id": "Ingrese ID de Escrow (ej. 5)",
        "credentials.instruction": "🔹 Después de que el vendedor proporcione las credenciales: Ingrese el ID de Escrow para ver/descargar las credenciales",
       "credentials.ph_escrow_id": "Ingrese ID de Escrow (ej. 5)",
       "credentials.h3": "Credenciales proporcionadas por el vendedor",
