--- a/buyer_dashboard.html
+++ b/buyer_dashboard.html
@@ -531,7 +531,7 @@ const translations = {
       "credentials.ph_escrow_id": "Enter Escrow ID (e.g., 5)",
       "credentials.h3": "Seller Provided Credentials", 
       "btn.fetch_credentials": "Fetch Credentials",
-      "btn.download": "Download",
+      "btn.download": "Download"
     }
   },
   de: {
@@ -583,12 +583,12 @@ const translations = {
       "mark_paid.instruction": "🔹 Nach Zahlung: Geben Sie die Escrow-ID ein, die nach der Erstellung angezeigt wird",
       "mark_paid.ph_escrow_id": "Escrow-ID eingeben (z.B. 5)",
       "release.instruction": "🔹 Nach Bestätigung der Waren/Dienstleistungen: Geben Sie die Escrow-ID ein, um die Zahlung an den Verkäufer freizugeben",
-      "relea"credentials.instruction": "🔹 Nachdem der Verkäufer Anmeldedaten bereitgestellt hat: Escrow-ID eingeben, um Anmeldedaten anzuzeigen/herunterzuladen",
+      "release.ph_escrow_id": "Escrow-ID eingeben (z.B. 5)",
+      "credentials.instruction": "🔹 Nachdem der Verkäufer Anmeldedaten bereitgestellt hat: Escrow-ID eingeben, um Anmeldedaten anzuzeigen/herunterzuladen",
       "credentials.ph_escrow_id": "Escrow-ID eingeben (z.B. 5)",
       "credentials.h3": "Vom Verkäufer bereitgestellte Anmeldedaten",
       "btn.fetch_credentials": "Anmeldedaten abrufen", 
-      "btn.download": "Herunterladen",se.ph_escrow_id": "Escrow-ID eingeben (z.B. 5)"
-       
+      "btn.download": "Herunterladen"
     }
   },
   fr: {
@@ -645,7 +645,7 @@ const translations = {
       "credentials.ph_escrow_id": "Entrez l'ID Escrow (ex. 5)",
       "credentials.h3": "Identifiants fournis par le vendeur",
       "btn.fetch_credentials": "Récupérer les identifiants",
-      "btn.download": "Télécharger",
+      "btn.download": "Télécharger"
     }
   },
   it: {
@@ -702,7 +702,7 @@ const translations = {
       "credentials.ph_escrow_id": "Inserisci ID Escrow (es. 5)",
       "credentials.h3": "Credenziali fornite dal venditore", 
       "btn.fetch_credentials": "Recupera credenziali",
-      "btn.download": "Scarica",
+      "btn.download": "Scarica"
     }
   },
   es: {
@@ -759,7 +759,7 @@ const translations = {
       "credentials.ph_escrow_id": "Ingrese ID de Escrow (ej. 5)",
       "credentials.h3": "Credenciales proporcionadas por el vendedor",
       "btn.fetch_credentials": "Obtener credenciales",
-      "btn.download": "Descargar",
+      "btn.download": "Descargar"
     }
   }
 };
