--- a/index.html
+++ b/index.html
@@ -830,9 +830,9 @@
        Live chat
       </div>
 <div>
-<a data-i18n="footer_chat_link" href="https://calendar.app.google/e17xCZ5wzsouKU7N8" rel="noopener" target="_blank">
-        Google Meet
-       </a>
+<a data-i18n="footer_chat_link" href="https://join.slack.com/share/enQtOTg3NTE1ODYzODcxMS0wODBmM2MyOGYxMTJiMTJhYWMzMmEwNWFlYmVjOGQ2NWNkMWFjY2ExNTY0ZjY5ZGE3YzcyZjA3NTRjNTc3Mjdi?p=free&entry_point=pricing_page" rel="noopener" target="_blank">
+    Live Chat with Us
+</a>
 </div>
 </div>
 </div>
