--- a/seller_dashboard.html
+++ b/seller_dashboard.html
@@ -880,8 +880,8 @@ const translations = {
       "method.trc": "USDT TRC20",
       "method.erc": "USDT ERC20",
       "method.bep": "BTC (BEP20)",
-      "method.cashapp": "Cash App (nur USA)",
-      "method.bank": "Banküberweisung (Revolut Instant)",
+      "method.cashapp": "Cash App (solo EE. UU.)",
+      "method.bank": "Transferencia bancaria (Revolut Instant)",
       "method.bank_note": "Kontaktieren Sie den Support, um Banküberweisungsdetails einzurichten",
       "btn.copy": "Kopieren",
       "btn.save": "Speichern",
