--- a/seller_dashboard.html
+++ b/seller_dashboard.html
@@ -1065,76 +1065,74 @@ const translations = {
       "footer.support_link": "Unisciti al supporto dal vivo su Slack"
     }
   },
-  es: {
-    translation: {
-      "title": "Panel de Vendedor – VanGuard Escrow",
-      "header.title": "Panel de Vendedor",
-      "btn.logout": "Cerrar sesión",
-      "nav.escrow": "Configuración de Escrow",
-      "nav.my_escrows": "Mis Escrows",
-      "nav.transactions": "Transacciones",
-      "nav.kyc": "KYC",
-      "pending.h2": "Escrows pendientes",
-      "pending.desc": "Revise las solicitudes de escrow iniciadas por el comprador que esperan su confirmación.",
-      "delivery.h2": "Enviar entrega y términos",
-      "release.h2": "Solicitar liberación de pago",
-      "release.desc": "Solicite al comprador que libere el pago después de completar la entrega. Asegúrese de haber configurado su método de retiro arriba.",
-      "withdrawal.h2": "Configurar su método de retiro",
-      "withdrawal.desc": "Ingrese sus direcciones de billetera donde desea recibir los pagos. Estas se utilizarán para todos sus pagos.",
-      "method.trc": "USDT TRC20",
-      "method.erc": "USDT ERC20",
-      "method.bep": "BTC (BEP20)",
-      "method.cashapp": "Cash App (solo EE. UU.)",
-      "
-method.bank": "Transferencia bancaria (Revolut Instant)",
-      "method.bank_note": "Contacte al soporte para configurar los detalles de transferencia bancaria",
-      "btn.copy": "Copiar",
-      "btn.save": "Guardar",
-      "btn.info": "Info",
-      "btn.submit_delivery": "Enviar entrega",
-      "btn.request_release": "Solicitar liberación",
-      "btn.confirm_escrow": "Confirmar escrow",
-      "btn.reject_escrow": "Rechazar escrow",
-      "ph.escrow_id": "ID de Escrow",
-      "ph.delivery_terms": "Describa sus entregables o términos...",
-      "ph.deliverable_content": "Pegue texto entregable, enlaces de descarga o instrucciones...",
-      "ph.wallet_trc": "Ingrese su dirección de billetera USDT TRC20",
-      "ph.wallet_erc": "Ingrese su dirección de billetera USDT ERC20",
-      "ph.wallet_bep": "Ingrese su dirección de billetera BTC BEP20",
-      "ph.wallet_cashapp": "Ingrese su nombre de usuario de Cash App",
-      "label.delivery_terms": "Términos de entrega:",
-      "label.deliverable_content": "Contenido entregable:",
-      "label.attach_files": "Adjuntar archivos:",
-      "label.selected_files": "Archivos seleccionados:",
-      "label.saved_wallets": "Billeteras guardadas:",
-      "note.bank_limit": "NB: Las transferencias bancarias no están soportadas para montos superiores a $5000.",
-      "my.h2": "Mis Escrows",
-      "tbl.id": "ID",
-      "tbl.buyer": "Comprador",
-      "tbl.status": "Estado",
-      "tbl.amount": "Monto",
-      "tbl.wallet": "Billetera",
-      "tbl.actions": "Acciones",
-      "transactions.h2": "Transacciones",
-      "kyc.h2": "KYC",
-      "kyc.note": "Se requerirá verificación KYC para vendedores que elijan recibir el pago mediante transferencia bancaria.",
-      "footer.guide_title": "📋 Cómo usar el Panel de Vendedor",
-      "footer.step1_title": "Revisar escrows pendientes:",
-      "footer.step1_desc": "Consulte la tabla \"Escrows pendientes\" para ver las solicitudes de compradores. Haga clic en \"Confirmar\" para aceptar o \"Rechazar\" para declinar.",
-      "footer.step2_title": "Configurar métodos de retiro:",
-      "footer.step2_desc": "Ingrese sus direcciones de billetera cripto o su nombre de usuario de Cash App. Haga clic en \"Guardar\" para almacenar cada método de pago.",
-      "footer.step3_title": "Enviar entrega:",
-      "footer.step3_desc": "Después de confirmar un escrow, ingrese el ID de Escrow, describa sus entregables, adjunte archivos si es necesario y haga clic en \"Enviar entrega\".",
-      "footer.step4_title": "Solicitar liberación:",
-      "footer.step4_desc": "Una vez completada la entrega, ingrese el ID de Escrow y haga clic en \"Solicitar liberación\" para notificar al comprador que libere el pago.",
-      "footer.step5_title": "Rastrear sus escrows:",
-      "footer.step5_desc": "Use la pestaña \"Mis Escrows\" para monitorear todas sus transacciones activas.",
-      "footer.support_title": "💬 ¿Necesita ayuda?",
-      "footer.support_desc": "Nuestro equipo de soporte está listo para ayudarlo con cualquier pregunta o problema.",
-      "footer.support_link": "Únase al soporte en vivo en Slack"
-    }
+es: {
+  translation: {
+    "title": "Panel de Vendedor – VanGuard Escrow",
+    "header.title": "Panel de Vendedor",
+    "btn.logout": "Cerrar sesión",
+    "nav.escrow": "Configuración de Escrow",
+    "nav.my_escrows": "Mis Escrows",
+    "nav.transactions": "Transacciones",
+    "nav.kyc": "KYC",
+    "pending.h2": "Escrows pendientes",
+    "pending.desc": "Revise las solicitudes de escrow iniciadas por el comprador que esperan su confirmación.",
+    "delivery.h2": "Enviar entrega y términos",
+    "release.h2": "Solicitar liberación de pago",
+    "release.desc": "Solicite al comprador que libere el pago después de completar la entrega. Asegúrese de haber configurado su método de retiro arriba.",
+    "withdrawal.h2": "Configurar su método de retiro",
+    "withdrawal.desc": "Ingrese sus direcciones de billetera donde desea recibir los pagos. Estas se utilizarán para todos sus pagos.",
+    "method.trc": "USDT TRC20",
+    "method.erc": "USDT ERC20",
+    "method.bep": "BTC (BEP20)",
+    "method.cashapp": "Cash App (solo EE. UU.)",
+    "method.bank": "Transferencia bancaria (Revolut Instant)",
+    "method.bank_note": "Contacte al soporte para configurar los detalles de transferencia bancaria",
+    "btn.copy": "Copiar",
+    "btn.save": "Guardar",
+    "btn.info": "Info",
+    "btn.submit_delivery": "Enviar entrega",
+    "btn.request_release": "Solicitar liberación",
+    "btn.confirm_escrow": "Confirmar escrow",
+    "btn.reject_escrow": "Rechazar escrow",
+    "ph.escrow_id": "ID de Escrow",
+    "ph.delivery_terms": "Describa sus entregables o términos...",
+    "ph.deliverable_content": "Pegue texto entregable, enlaces de descarga o instrucciones...",
+    "ph.wallet_trc": "Ingrese su dirección de billetera USDT TRC20",
+    "ph.wallet_erc": "Ingrese su dirección de billetera USDT ERC20",
+    "ph.wallet_bep": "Ingrese su dirección de billetera BTC BEP20",
+    "ph.wallet_cashapp": "Ingrese su nombre de usuario de Cash App",
+    "label.delivery_terms": "Términos de entrega:",
+    "label.deliverable_content": "Contenido entregable:",
+    "label.attach_files": "Adjuntar archivos:",
+    "label.selected_files": "Archivos seleccionados:",
+    "label.saved_wallets": "Billeteras guardadas:",
+    "note.bank_limit": "NB: Las transferencias bancarias no están soportadas para montos superiores a $5000.",
+    "my.h2": "Mis Escrows",
+    "tbl.id": "ID",
+    "tbl.buyer": "Comprador",
+    "tbl.status": "Estado",
+    "tbl.amount": "Monto",
+    "tbl.wallet": "Billetera",
+    "tbl.actions": "Acciones",
+    "transactions.h2": "Transacciones",
+    "kyc.h2": "KYC",
+    "kyc.note": "Se requerirá verificación KYC para vendedores que elijan recibir el pago mediante transferencia bancaria.",
+    "footer.guide_title": "📋 Cómo usar el Panel de Vendedor",
+    "footer.step1_title": "Revisar escrows pendientes:",
+    "footer.step1_desc": "Consulte la tabla \"Escrows pendientes\" para ver las solicitudes de compradores. Haga clic en \"Confirmar\" para aceptar o \"Rechazar\" para declinar.",
+    "footer.step2_title": "Configurar métodos de retiro:",
+    "footer.step2_desc": "Ingrese sus direcciones de billetera cripto o su nombre de usuario de Cash App. Haga clic en \"Guardar\" para almacenar cada método de pago.",
+    "footer.step3_title": "Enviar entrega:",
+    "footer.step3_desc": "Después de confirmar un escrow, ingrese el ID de Escrow, describa sus entregables, adjunte archivos si es necesario y haga clic en \"Enviar entrega\".",
+    "footer.step4_title": "Solicitar liberación:",
+    "footer.step4_desc": "Una vez completada la entrega, ingrese el ID de Escrow y haga clic en \"Solicitar liberación\" para notificar al comprador que libere el pago.",
+    "footer.step5_title": "Rastrear sus escrows:",
+    "footer.step5_desc": "Use la pestaña \"Mis Escrows\" para monitorear todas sus transacciones activas.",
+    "footer.support_title": "💬 ¿Necesita ayuda?",
+    "footer.support_desc": "Nuestro equipo de soporte está listo para ayudarlo con cualquier pregunta o problema.",
+    "footer.support_link": "Únase al soporte en vivo en Slack"
   }
-};
+}
 
 // Initialize i18next
 i18next.init({
