--- a/buyer_dashboard.html
+++ b/buyer_dashboard.html
@@ -532,6 +532,28 @@ const translations = {
       "credentials.h3": "Seller Provided Credentials", 
       "btn.fetch_credentials": "Fetch Credentials",
       "btn.download": "Download"
+       "btn.fetch_credentials": "Fetch Credentials",
+      "btn.download": "Download",
+      "footer.guide_title": "📋 How to Place an Escrow as Buyer",
+      "footer.step1_title": "Fill Escrow Details:",
+      "footer.step1_desc": "Enter the seller's email, describe what you're buying, and specify the amount in USD.",
+      "footer.step2_title": "Select Payment Method:",
+      "footer.step2_desc": "Choose from USDT TRC20, USDT ERC20, BTC BEP20, Cash App, or Bank Transfer. Click \"Use\" to auto-fill the payment field.",
+      "footer.step3_title": "Create Escrow:",
+      "footer.step3_desc": "Click \"Create Escrow\" and save the Escrow ID that appears. You'll need this ID for all future steps.",
+      "footer.step4_title": "Make Payment:",
+      "footer.step4_desc": "Send payment to the wallet address shown. Use the exact amount specified in your escrow.",
+      "footer.step5_title": "Mark as Paid:",
+      "footer.step5_desc": "After sending payment, enter your Escrow ID in the \"Mark as Paid\" section to notify the seller.",
+      "footer.step6_title": "Wait for Seller:",
+      "footer.step6_desc": "The seller will confirm the escrow and deliver the goods/services/credentials within the agreed timeframe.",
+      "footer.step7_title": "Fetch Credentials:",
+      "footer.step7_desc": "Once seller delivers, enter your Escrow ID in the \"Fetch Credentials\" section to view and download what you purchased.",
+      "footer.step8_title": "Release Payment:",
+      "footer.step8_desc": "After confirming you received everything correctly, enter your Escrow ID in \"Release Funds\" to complete the transaction and pay the seller.",
+      "footer.support_title": "💬 Need Help?",
+      "footer.support_desc": "If your order takes more than 10 minutes to receive credentials after payment, or if you have any questions:",
+      "footer.support_link": "Join Live Support on Slack"
     }
   },
   de: {
@@ -589,6 +611,26 @@ const translations = {
       "credentials.h3": "Vom Verkäufer bereitgestellte Anmeldedaten",
       "btn.fetch_credentials": "Anmeldedaten abrufen", 
       "btn.download": "Herunterladen"
+       "footer.guide_title": "📋 So platzieren Sie ein Escrow als Käufer",
+      "footer.step1_title": "Escrow-Details ausfüllen:",
+      "footer.step1_desc": "Geben Sie die E-Mail des Verkäufers ein, beschreiben Sie, was Sie kaufen, und geben Sie den Betrag in USD an.",
+      "footer.step2_title": "Zahlungsmethode wählen:",
+      "footer.step2_desc": "Wählen Sie zwischen USDT TRC20, USDT ERC20, BTC BEP20, Cash App oder Banküberweisung. Klicken Sie auf \"Verwenden\", um das Zahlungsfeld automatisch auszufüllen.",
+      "footer.step3_title": "Escrow erstellen:",
+      "footer.step3_desc": "Klicken Sie auf \"Escrow erstellen\" und speichern Sie die angezeigte Escrow-ID. Sie benötigen diese ID für alle zukünftigen Schritte.",
+      "footer.step4_title": "Zahlung tätigen:",
+      "footer.step4_desc": "Senden Sie die Zahlung an die angezeigte Wallet-Adresse. Verwenden Sie den genauen in Ihrem Escrow angegebenen Betrag.",
+      "footer.step5_title": "Als bezahlt markieren:",
+      "footer.step5_desc": "Geben Sie nach dem Senden der Zahlung Ihre Escrow-ID im Abschnitt \"Als bezahlt markieren\" ein, um den Verkäufer zu benachrichtigen.",
+      "footer.step6_title": "Auf Verkäufer warten:",
+      "footer.step6_desc": "Der Verkäufer bestätigt das Escrow und liefert die Waren/Dienstleistungen/Anmeldedaten innerhalb des vereinbarten Zeitrahmens.",
+      "footer.step7_title": "Anmeldedaten abrufen:",
+      "footer.step7_desc": "Sobald der Verkäufer geliefert hat, geben Sie Ihre Escrow-ID im Abschnitt \"Anmeldedaten abrufen\" ein, um das Gekaufte anzuzeigen und herunterzuladen.",
+      "footer.step8_title": "Zahlung freigeben:",
+      "footer.step8_desc": "Nachdem Sie bestätigt haben, dass Sie alles korrekt erhalten haben, geben Sie Ihre Escrow-ID unter \"Mittel freigeben\" ein, um die Transaktion abzuschließen und den Verkäufer zu bezahlen.",
+      "footer.support_title": "💬 Brauchen Sie Hilfe?",
+      "footer.support_desc": "Wenn Ihre Bestellung nach der Zahlung länger als 10 Minuten dauert, um Anmeldedaten zu erhalten, oder wenn Sie Fragen haben:",
+      "footer.support_link": "Live-Support auf Slack beitreten"
     }
   },
   fr: {
@@ -646,6 +688,26 @@ const translations = {
       "credentials.h3": "Identifiants fournis par le vendeur",
       "btn.fetch_credentials": "Récupérer les identifiants",
       "btn.download": "Télécharger"
+       "footer.guide_title": "📋 Comment placer un Escrow en tant qu'acheteur",
+      "footer.step1_title": "Remplir les détails de l'escrow:",
+      "footer.step1_desc": "Entrez l'e-mail du vendeur, décrivez ce que vous achetez et spécifiez le montant en USD.",
+      "footer.step2_title": "Sélectionner la méthode de paiement:",
+      "footer.step2_desc": "Choisissez parmi USDT TRC20, USDT ERC20, BTC BEP20, Cash App ou Virement bancaire. Cliquez sur \"Utiliser\" pour remplir automatiquement le champ de paiement.",
+      "footer.step3_title": "Créer l'escrow:",
+      "footer.step3_desc": "Cliquez sur \"Créer un Escrow\" et enregistrez l'ID d'escrow qui apparaît. Vous aurez besoin de cet ID pour toutes les étapes futures.",
+      "footer.step4_title": "Effectuer le paiement:",
+      "footer.step4_desc": "Envoyez le paiement à l'adresse de portefeuille affichée. Utilisez le montant exact spécifié dans votre escrow.",
+      "footer.step5_title": "Marquer comme payé:",
+      "footer.step5_desc": "Après avoir envoyé le paiement, entrez votre ID d'escrow dans la section \"Marquer comme payé\" pour notifier le vendeur.",
+      "footer.step6_title": "Attendre le vendeur:",
+      "footer.step6_desc": "Le vendeur confirmera l'escrow et livrera les biens/services/identifiants dans le délai convenu.",
+      "footer.step7_title": "Récupérer les identifiants:",
+      "footer.step7_desc": "Une fois que le vendeur a livré, entrez votre ID d'escrow dans la section \"Récupérer les identifiants\" pour voir et télécharger ce que vous avez acheté.",
+      "footer.step8_title": "Libérer le paiement:",
+      "footer.step8_desc": "Après avoir confirmé que vous avez tout reçu correctement, entrez votre ID d'escrow dans \"Libérer les fonds\" pour finaliser la transaction et payer le vendeur.",
+      "footer.support_title": "💬 Besoin d'aide?",
+      "footer.support_desc": "Si votre commande prend plus de 10 minutes pour recevoir les identifiants après le paiement, ou si vous avez des questions:",
+      "footer.support_link": "Rejoindre le support en direct sur Slack"
     }
   },
   it: {
@@ -703,6 +765,26 @@ const translations = {
       "credentials.h3": "Credenziali fornite dal venditore", 
       "btn.fetch_credentials": "Recupera credenziali",
       "btn.download": "Scarica"
+       "footer.guide_title": "📋 Come effettuare un Escrow come acquirente",
+      "footer.step1_title": "Compilare i dettagli dell'escrow:",
+      "footer.step1_desc": "Inserisci l'email del venditore, descrivi cosa stai acquistando e specifica l'importo in USD.",
+      "footer.step2_title": "Seleziona il metodo di pagamento:",
+      "footer.step2_desc": "Scegli tra USDT TRC20, USDT ERC20, BTC BEP20, Cash App o Bonifico bancario. Fai clic su \"Usa\" per compilare automaticamente il campo di pagamento.",
+      "footer.step3_title": "Crea l'escrow:",
+      "footer.step3_desc": "Fai clic su \"Crea Escrow\" e salva l'ID Escrow che appare. Avrai bisogno di questo ID per tutti i passaggi futuri.",
+      "footer.step4_title": "Effettua il pagamento:",
+      "footer.step4_desc": "Invia il pagamento all'indirizzo wallet mostrato. Usa l'importo esatto specificato nel tuo escrow.",
+      "footer.step5_title": "Segna come pagato:",
+      "footer.step5_desc": "Dopo aver inviato il pagamento, inserisci il tuo ID Escrow nella sezione \"Segna come pagato\" per notificare il venditore.",
+      "footer.step6_title": "Aspetta il venditore:",
+      "footer.step6_desc": "Il venditore confermerà l'escrow e consegnerà i beni/servizi/credenziali entro il periodo concordato.",
+      "footer.step7_title": "Recupera le credenziali:",
+      "footer.step7_desc": "Una volta che il venditore ha consegnato, inserisci il tuo ID Escrow nella sezione \"Recupera credenziali\" per visualizzare e scaricare ciò che hai acquistato.",
+      "footer.step8_title": "Rilascia il pagamento:",
+      "footer.step8_desc": "Dopo aver confermato di aver ricevuto tutto correttamente, inserisci il tuo ID Escrow in \"Rilascia fondi\" per completare la transazione e pagare il venditore.",
+      "footer.support_title": "💬 Hai bisogno di aiuto?",
+      "footer.support_desc": "Se il tuo ordine impiega più di 10 minuti per ricevere le credenziali dopo il pagamento, o se hai domande:",
+      "footer.support_link": "Unisciti al supporto dal vivo su Slack"
     }
   },
   es: {
@@ -760,6 +842,26 @@ const translations = {
       "credentials.h3": "Credenciales proporcionadas por el vendedor",
       "btn.fetch_credentials": "Obtener credenciales",
       "btn.download": "Descargar"
+       "footer.guide_title": "📋 Cómo realizar un Escrow como comprador",
+      "footer.step1_title": "Completar detalles del escrow:",
+      "footer.step1_desc": "Ingrese el correo electrónico del vendedor, describa lo que está comprando y especifique el monto en USD.",
+      "footer.step2_title": "Seleccionar método de pago:",
+      "footer.step2_desc": "Elija entre USDT TRC20, USDT ERC20, BTC BEP20, Cash App o Transferencia bancaria. Haga clic en \"Usar\" para completar automáticamente el campo de pago.",
+      "footer.step3_title": "Crear escrow:",
+      "footer.step3_desc": "Haga clic en \"Crear Escrow\" y guarde el ID de Escrow que aparece. Necesitará este ID para todos los pasos futuros.",
+      "footer.step4_title": "Realizar pago:",
+      "footer.step4_desc": "Envíe el pago a la dirección de billetera mostrada. Use el monto exacto especificado en su escrow.",
+      "footer.step5_title": "Marcar como pagado:",
+      "footer.step5_desc": "Después de enviar el pago, ingrese su ID de Escrow en la sección \"Marcar como pagado\" para notificar al vendedor.",
+      "footer.step6_title": "Esperar al vendedor:",
+      "footer.step6_desc": "El vendedor confirmará el escrow y entregará los bienes/servicios/credenciales dentro del plazo acordado.",
+      "footer.step7_title": "Obtener credenciales:",
+      "footer.step7_desc": "Una vez que el vendedor entregue, ingrese su ID de Escrow en la sección \"Obtener credenciales\" para ver y descargar lo que compró.",
+      "footer.step8_title": "Liberar pago:",
+      "footer.step8_desc": "Después de confirmar que recibió todo correctamente, ingrese su ID de Escrow en \"Liberar fondos\" para completar la transacción y pagar al vendedor.",
+      "footer.support_title": "💬 ¿Necesita ayuda?",
+      "footer.support_desc": "Si su pedido tarda más de 10 minutos en recibir credenciales después del pago, o si tiene preguntas:",
+      "footer.support_link": "Únase al soporte en vivo en Slack"
     }
   }
 };
@@ -876,6 +978,28 @@ document.addEventListener('DOMContentLoaded', () => {
     });
   }
 });
+<footer style="background:#f8fafc;border-top:2px solid #e2e8f0;padding:30px 20px;margin-top:40px;">
+<div style="max-width:1000px;margin:0 auto;">
+<div style="background:white;border-radius:12px;padding:20px;margin-bottom:20px;box-shadow:0 2px 8px rgba(0,0,0,0.06);">
+<h3 style="color:#1e40af;margin-top:0;" data-i18n="footer.guide_title">📋 How to Place an Escrow as Buyer</h3>
+<ol style="padding-left:20px;">
+<li style="margin-bottom:10px;line-height:1.6;"><strong data-i18n="footer.step1_title">Fill Escrow Details:</strong> <span data-i18n="footer.step1_desc">Enter the seller's email, describe what you're buying, and specify the amount in USD.</span></li>
+<li style="margin-bottom:10px;line-height:1.6;"><strong data-i18n="footer.step2_title">Select Payment Method:</strong> <span data-i18n="footer.step2_desc">Choose from USDT TRC20, USDT ERC20, BTC BEP20, Cash App, or Bank Transfer. Click "Use" to auto-fill the payment field.</span></li>
+<li style="margin-bottom:10px;line-height:1.6;"><strong data-i18n="footer.step3_title">Create Escrow:</strong> <span data-i18n="footer.step3_desc">Click "Create Escrow" and save the Escrow ID that appears. You'll need this ID for all future steps.</span></li>
+<li style="margin-bottom:10px;line-height:1.6;"><strong data-i18n="footer.step4_title">Make Payment:</strong> <span data-i18n="footer.step4_desc">Send payment to the wallet address shown. Use the exact amount specified in your escrow.</span></li>
+<li style="margin-bottom:10px;line-height:1.6;"><strong data-i18n="footer.step5_title">Mark as Paid:</strong> <span data-i18n="footer.step5_desc">After sending payment, enter your Escrow ID in the "Mark as Paid" section to notify the seller.</span></li>
+<li style="margin-bottom:10px;line-height:1.6;"><strong data-i18n="footer.step6_title">Wait for Seller:</strong> <span data-i18n="footer.step6_desc">The seller will confirm the escrow and deliver the goods/services/credentials within the agreed timeframe.</span></li>
+<li style="margin-bottom:10px;line-height:1.6;"><strong data-i18n="footer.step7_title">Fetch Credentials:</strong> <span data-i18n="footer.step7_desc">Once seller delivers, enter your Escrow ID in the "Fetch Credentials" section to view and download what you purchased.</span></li>
+<li style="margin-bottom:10px;line-height:1.6;"><strong data-i18n="footer.step8_title">Release Payment:</strong> <span data-i18n="footer.step8_desc">After confirming you received everything correctly, enter your Escrow ID in "Release Funds" to complete the transaction and pay the seller.</span></li>
+</ol>
+</div>
+<div style="background:linear-gradient(90deg,#1e40af,#3b82f6);color:white;padding:20px;border-radius:12px;text-align:center;">
+<h3 style="margin-top:0;" data-i18n="footer.support_title">💬 Need Help?</h3>
+<p data-i18n="footer.support_desc">If your order takes more than 10 minutes to receive credentials after payment, or if you have any questions:</p>
+<a href="https://join.slack.com/share/enQtOTg3NTE1ODYzODcxMS0wODBmM2MyOGYxMTJiMTJhYWMzMmEwNWFlYmVjOGQ2NWNkMWFjY2ExNTY0ZjY5ZGE3YzcyZjA3NTRjNTc3Mjdi?p=free&entry_point=pricing_page" target="_blank" style="display:inline-block;background:white;color:#1e40af;padding:12px 24px;border-radius:8px;text-decoration:none;font-weight:600;margin-top:10px;transition:transform 0.2s;" onmouseover="this.style.transform='translateY(-2px)'" onmouseout="this.style.transform='translateY(0)'" data-i18n="footer.support_link">Join Live Support on Slack</a>
+</div>
+</div>
+</footer>
 </script>
 </body>
 </html>
