--- a/buyer_dashboard.html
+++ b/buyer_dashboard.html
@@ -610,7 +610,7 @@ const translations = {
       "credentials.ph_escrow_id": "Escrow-ID eingeben (z.B. 5)",
       "credentials.h3": "Vom Verkäufer bereitgestellte Anmeldedaten",
       "btn.fetch_credentials": "Anmeldedaten abrufen", 
-      "btn.download": "Herunterladen"
+      "btn.download": "Herunterladen",
        "footer.guide_title": "📋 So platzieren Sie ein Escrow als Käufer",
       "footer.step1_title": "Escrow-Details ausfüllen:",
       "footer.step1_desc": "Geben Sie die E-Mail des Verkäufers ein, beschreiben Sie, was Sie kaufen, und geben Sie den Betrag in USD an.",
@@ -687,7 +687,7 @@ const translations = {
       "credentials.ph_escrow_id": "Entrez l'ID Escrow (ex. 5)",
       "credentials.h3": "Identifiants fournis par le vendeur",
       "btn.fetch_credentials": "Récupérer les identifiants",
-      "btn.download": "Télécharger"
+      "btn.download": "Télécharger",
        "footer.guide_title": "📋 Comment placer un Escrow en tant qu'acheteur",
       "footer.step1_title": "Remplir les détails de l'escrow:",
       "footer.step1_desc": "Entrez l'e-mail du vendeur, décrivez ce que vous achetez et spécifiez le montant en USD.",
@@ -764,7 +764,7 @@ const translations = {
       "credentials.ph_escrow_id": "Inserisci ID Escrow (es. 5)",
       "credentials.h3": "Credenziali fornite dal venditore", 
       "btn.fetch_credentials": "Recupera credenziali",
-      "btn.download": "Scarica"
+      "btn.download": "Scarica",
        "footer.guide_title": "📋 Come effettuare un Escrow come acquirente",
       "footer.step1_title": "Compilare i dettagli dell'escrow:",
       "footer.step1_desc": "Inserisci l'email del venditore, descrivi cosa stai acquistando e specifica l'importo in USD.",
@@ -841,7 +841,7 @@ const translations = {
       "credentials.ph_escrow_id": "Ingrese ID de Escrow (ej. 5)",
       "credentials.h3": "Credenciales proporcionadas por el vendedor",
       "btn.fetch_credentials": "Obtener credenciales",
-      "btn.download": "Descargar"
+      "btn.download": "Descargar",
        "footer.guide_title": "📋 Cómo realizar un Escrow como comprador",
       "footer.step1_title": "Completar detalles del escrow:",
       "footer.step1_desc": "Ingrese el correo electrónico del vendedor, describa lo que está comprando y especifique el monto en USD.",
