--- a/buyer_dashboard.html
+++ b/buyer_dashboard.html
@@ -531,8 +531,8 @@ const translations = {
       "credentials.ph_escrow_id": "Enter Escrow ID (e.g., 5)",
       "credentials.h3": "Seller Provided Credentials", 
       "btn.fetch_credentials": "Fetch Credentials",
-      "btn.download": "Download"
-       "btn.fetch_credentials": "Fetch Credentials",
+      "btn.download": "Download",
+      "btn.fetch_credentials": "Fetch Credentials",
       "btn.download": "Download",
       "footer.guide_title": "📋 How to Place an Escrow as Buyer",
       "footer.step1_title": "Fill Escrow Details:",
@@ -611,7 +611,7 @@ const translations = {
       "credentials.h3": "Vom Verkäufer bereitgestellte Anmeldedaten",
       "btn.fetch_credentials": "Anmeldedaten abrufen", 
       "btn.download": "Herunterladen",
-       "footer.guide_title": "📋 So platzieren Sie ein Escrow als Käufer",
+      "footer.guide_title": "📋 So platzieren Sie ein Escrow als Käufer",
       "footer.step1_title": "Escrow-Details ausfüllen:",
       "footer.step1_desc": "Geben Sie die E-Mail des Verkäufers ein, beschreiben Sie, was Sie kaufen, und geben Sie den Betrag in USD an.",
       "footer.step2_title": "Zahlungsmethode wählen:",
@@ -688,7 +688,7 @@ const translations = {
       "credentials.h3": "Identifiants fournis par le vendeur",
       "btn.fetch_credentials": "Récupérer les identifiants",
       "btn.download": "Télécharger",
-       "footer.guide_title": "📋 Comment placer un Escrow en tant qu'acheteur",
+      "footer.guide_title": "📋 Comment placer un Escrow en tant qu'acheteur",
       "footer.step1_title": "Remplir les détails de l'escrow:",
       "footer.step1_desc": "Entrez l'e-mail du vendeur, décrivez ce que vous achetez et spécifiez le montant en USD.",
       "footer.step2_title": "Sélectionner la méthode de paiement:",
@@ -765,7 +765,7 @@ const translations = {
       "credentials.h3": "Credenziali fornite dal venditore", 
       "btn.fetch_credentials": "Recupera credenziali",
       "btn.download": "Scarica",
-       "footer.guide_title": "📋 Come effettuare un Escrow come acquirente",
+      "footer.guide_title": "📋 Come effettuare un Escrow come acquirente",
       "footer.step1_title": "Compilare i dettagli dell'escrow:",
       "footer.step1_desc": "Inserisci l'email del venditore, descrivi cosa stai acquistando e specifica l'importo in USD.",
       "footer.step2_title": "Seleziona il metodo di pagamento:",
@@ -842,7 +842,7 @@ const translations = {
       "credentials.h3": "Credenciales proporcionadas por el vendedor",
       "btn.fetch_credentials": "Obtener credenciales",
       "btn.download": "Descargar",
-       "footer.guide_title": "📋 Cómo realizar un Escrow como comprador",
+      "footer.guide_title": "📋 Cómo realizar un Escrow como comprador",
       "footer.step1_title": "Completar detalles del escrow:",
       "footer.step1_desc": "Ingrese el correo electrónico del vendedor, describa lo que está comprando y especifique el monto en USD.",
       "footer.step2_title": "Seleccionar método de pago:",
